Real rebase of waitforworkes option
